--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:migrate": "npx sequelize db:migrate",
+    "test": "mocha test/specs"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,10 @@
     "mysql2": "3.3.1",
     "sequelize": "6.31.1",
     "ws": "8.13.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "sequelize-cli": "^6.6.0"
   }
 }
