--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
   "name": "backend",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "node server with express",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "npm run db:migrate && node index.js",
     "db:migrate": "npx sequelize db:migrate",
-    "test": "mocha test/specs"
+    "test": "npm run db:migrate && mocha test/specs"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/srdn25/fullstack-express-react#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "4.18.2",
     "mysql2": "3.3.1",
     "sequelize": "6.31.1",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "supertest": "^6.3.3"
   }
 }
