--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,15 @@
 {
   "name": "backend",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "node server with express",
   "main": "index.js",
   "scripts": {
-    "start": "npm run db:migrate && node index.js",
-    "db:migrate": "npx sequelize db:migrate",
-    "test": "npm run db:migrate && mocha test/specs"
+    "start": "npm run migrate:dev:up && node index.js",
+    "migrate:dev:up": "set NODE_ENV=development&& node scripts/umzug.js up",
+    "migrate:test:up": "set NODE_ENV=test&& node scripts/umzug.js up",
+    "migrate:dev:down": "set NODE_ENV=development&& node scripts/umzug.js down --to 0",
+    "migrate:test:down": "set NODE_ENV=test&& node scripts/umzug.js down --to 0",
+    "test": "set NODE_ENV=test&&mocha test/specs"
   },
   "repository": {
     "type": "git",
@@ -27,12 +30,15 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "4.18.2",
+    "moment": "^2.29.4",
     "mysql2": "3.3.1",
     "sequelize": "6.31.1",
+    "umzug": "^3.2.1",
     "ws": "8.13.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
+    "faker": "5.5.3",
     "mocha": "^10.2.0",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3"
