--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,16 @@
-FROM node:18.14.0-alpine
+FROM node:18.14.0-alpine as build
 WORKDIR /home/app
 
-COPY package.json /home/app/
-COPY package-lock.json /home/app/
+COPY . .
 
 RUN npm ci
 
-COPY . /home/app
+RUN npm run build
 
-CMD ["npm", "run", "start"]
-EXPOSE 3000
+FROM nginx:alpine3.17-slim
+
+COPY --from=build /home/app/build /usr/share/nginx/html
+COPY --from=build /home/app/nginx/nginx.conf /etc/nginx/conf.d/nginx.conf
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
