--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,15 +1,29 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # IDE
 ../.idea
 
-.npm
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Logs
-*.log
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
 # env
 .env
