Create umzug script for seed database. Added seeds for task

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "backend",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "node server with express",
   "main": "index.js",
   "scripts": {
     "start": "npm run migrate:dev:up && node --inspect=9229 index.js",
+    "seed:up": "set NODE_ENV=development&& node scripts/seedCli.js up",
+    "seed:down": "set NODE_ENV=development&& node scripts/seedCli.js down",
     "migrate:dev:up": "set NODE_ENV=development&& node scripts/umzug.js up",
     "migrate:test:up": "set NODE_ENV=test&& node scripts/umzug.js up",
     "migrate:dev:down": "set NODE_ENV=development&& node scripts/umzug.js down --to 0",
